--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-simple-form",
   "version": "0.1.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "A form component for Ember inspired by DDAU and immutability.",
   "directories": {
     "doc": "doc",
     "test": "tests"
