--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "input"
   ],
   "dependencies": {
+    "ember-buffered-proxy": "0.5.1",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-babel": "^5.1.5"
   },
